# assurance-workbench-ui

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml  run.ps1  run.sh  update.ps1  update.sh
app/: __init__.py  cli.py  env.py  evidence.py  jobs.py  main.py  settings.py  signals.py  version.py
app/rulesets/: architecture.md  delivery.md  operations.md  risk.md  security.md  testing.md
app/static/: manifest.webmanifest
app/static/css/: app.css
app/templates/: base.html  guide.html  home.html  run_detail.html  runs.html  settings.html
app/templates/partials/: cli_check_result.html  code_repos.html  command_preview.html  file_action_result.html  job_status.html  run_result.html  settings_status.html
docs/: hosted-azure-workbench-note.md  local-llm-analysis-spec.md
tests/: test_app.py  test_cli.py  test_evidence.py  test_jobs.py  test_settings.py  test_signals.py
