[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assurance-workbench-ui"
version = "0.1.0"
description = "Local HTMX web UI wrapper for assurance-cli."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
