[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assurance-workbench-ui"
version = "0.1.0"
description = "Local HTMX web UI wrapper for assurance-cli."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "assurance-cli @ git+https://github.com/richlee-cgi/assurance-cli.git@main",
  "fastapi>=0.115",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"app/rulesets" = "app/rulesets"
